Avoid 1px jump when focus search
Note even with this change the animation to transition to search
is arguably jarring - this is due to the fadeIn animation on
.animations .search-overlay.visible - we may want to reconsider
this separately - possibly removing.

Changes:

To class names:
* Do not use box-sizing border box on overlay SearchOverlay given
we do not use it on the standard chrome
* Add the generic header class to the element which already has overlay-header
* Add the generic header-container class to the element which already has
overlay-header-container - it should be both
* Replace overlay-action with generic header-action

Changes to styling rules:
* The border-bottom is added to all header-containers (transparent
by default)
* Move border-collapse and spacing rules to generic .header rule - this can
impact the border width and thus lead to discrepancies in height
* Given we use position fixed in overlay headers remove the top margin - this
is not possible on fixed positioned elements
* Correct the clear button placement

Bug: T138286

--- a/resources/skins.minerva.base.styles/ui.less
+++ b/resources/skins.minerva.base.styles/ui.less
@@ -17,6 +17,7 @@ body {
 
 .header-container {
 	background-color: @chromeColor;
+	border-bottom: 1px solid transparent;
 }
 
 .search-overlay,
@@ -69,6 +70,8 @@ body {
 .header {
 	display: table;
 	width: 100%;
+	border-spacing: 0;
+	border-collapse: collapse;
 	height: @headerHeight;
 	white-space: nowrap;
 	// When banners are present we want to easily distinguish between them and the header so add border
@@ -104,6 +107,9 @@ body {
 		vertical-align: middle;
 	}
 
+	.header-action > * {
+		min-height: @headerHeight;
+	}
 }
 .header > form,
 .overlay-header .overlay-title {
